--- a/index.html
+++ b/index.html
@@ -8,29 +8,53 @@
 </head>
 <body>
     <header id="header" class="header">
-        <div class="logo">
-            <h1 class="logo">WorkWave Store</h3>
+        <div class="headerContenedor">
+            <div class="logo">
+                <h1 class="logo">WorkWave Store</h1>
+            </div>
+            <nav id="menuPrincipal" class="menuPrincipal">
+                <ul>
+                    <li><a href="">Inicio</a></li>
+                    <li><a href="">Nostros</a></li>
+                    <li><a href="">Productos</a></li>
+                    <li><a href="">Ofertas</a></li>
+                    <li><a href="">Contacto</a></li>
+                </ul>
+            </nav>
+            <div class="busqueda">
+                <input type="text" name="buscar" id="buscar" placeholder="¿Que estas buscando?">
+                <a href="">❤️</a>
+                <a href="">🛒</a>
+            </div>    
         </div>
-        <nav id="menuPrincipal" class="menuPrincipal">
-            <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Nostros</a></li>
-                <li><a href="">Productos</a></li>
-                <li><a href="">Ofertas</a></li>
-                <li><a href="">Contacto</a></li>
-            </ul>
-        </nav>
-        <div class="busqueda">
-            <input type="text" name="buscar" id="buscar" placeholder="Que estas buscando?">
-            <a href="">❤️</a>
-            <a href="">🛒</a>
-        </div>    
     </header>
-    <div class="aside">
-
-    </div>
-    <div class="slider">
-        
-    </div>
+    <main>
+        <div class="heroSection">
+            <aside class="aside">
+                <a href="">Categoria 1</a>
+                <a href="">Categoria 2</a>
+                <a href="">Categoria 3</a>
+                <a href="">Categoria 4</a>
+                <a href="">Categoria 5</a>
+                <a href="">Categoria 6</a>
+                <a href="">Categoria 7</a>
+                <a href="">Categoria 8</a>
+                <a href="">Categoria 9</a>
+            </aside>
+            <section class="sectionSlider">
+                <div class="slider">
+                    <h2>New Arrivals</h2>
+                    <p>Obtener 50% OFF en la primer compra</p>
+                    <button href="#">COMPRAR AHORA</button>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <div class="footerContenedor">
+            <p>&copy; 2024 WorkWave Store. Todos los derechos reservados.</p>
+            <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
+        </div>    
+    </footer>
 </body>
 </html>
