Sección Categorias, Mas vendidos, SVG y estilos varios

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css">
+    <link href="/your-path-to-uicons/css/uicons-[your-style].css" rel="stylesheet">
     <title>WorkWave Store</title>
 </head>
 <body>
@@ -29,7 +30,7 @@
         </div>
     </header>
     <main>
-        <div class="heroSection">
+        <section class="heroSection">
             <aside class="aside">
                 <a href="">Categoria 1</a>
                 <a href="">Categoria 2</a>
@@ -41,14 +42,96 @@
                 <a href="">Categoria 8</a>
                 <a href="">Categoria 9</a>
             </aside>
-            <section class="sectionSlider">
+            <div class="sectionSlider">
                 <div class="slider">
                     <h2>New Arrivals</h2>
                     <p>Obtener 50% OFF en la primer compra</p>
-                    <button href="#">COMPRAR AHORA</button>
+                    <a href="#">COMPRAR AHORA</a>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
+        <section class="productosDelDia">
+            <header>
+                <h4>Productos del día</h4>
+                <h2>Ofertas Trueno</h2>
+                <nav>
+                    <a href=""><</a>
+                    <a href="">></a>
+                </nav>
+            </header>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Titulo Producto</h3>
+                <p>Descripción producto</p>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Titulo Producto</h3>
+                <p>Descripción producto</p>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Titulo Producto</h3>
+                <p>Descripción producto</p>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Titulo Producto</h3>
+                <p>Descripción producto</p>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+        </section>
+        <section class="categorias">
+            <header>
+                <h4>Explora nuestras</h4>
+                <h2>Categorías</h2>
+                <nav>
+                    <a href=""><</a>
+                    <a href="">></a>
+                </nav>
+            </header>
+            <article class="categoriaItem">
+                <img src="./img/carrito-de-compras.svg" alt="Carrito de Compras">
+                <h3>Categoría 1</h4>
+            </article>
+        </section>
+        <section class="masVendidos">
+            <header>
+                <h4>No te pierdas lo</h4>
+                <h2>Más Vendidos</h2>
+                <nav>
+                    <a href=""><</a>
+                    <a href="">></a>
+                </nav>
+            </header>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Titulo Producto</h3>
+                <p>Descripción producto</p>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Titulo Producto</h3>
+                <p>Descripción producto</p>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Titulo Producto</h3>
+                <p>Descripción producto</p>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Titulo Producto</h3>
+                <p>Descripción producto</p>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+        </section>
     </main>
     <footer>
         <div class="footerContenedor">
