Dummy info de: Categorias, Productos, Descripciones, precio y SVG para categorias. Ajustes CSS en Titulo LOGO y NAV

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     <main>
         <section class="heroSection">
             <aside class="aside">
-                <a href="">Categoria 1</a>
-                <a href="">Categoria 2</a>
-                <a href="">Categoria 3</a>
-                <a href="">Categoria 4</a>
-                <a href="">Categoria 5</a>
-                <a href="">Categoria 6</a>
-                <a href="">Categoria 7</a>
-                <a href="">Categoria 8</a>
-                <a href="">Categoria 9</a>
+                <a href="">Tecnología</a>
+                <a href="">Productividad</a>
+                <a href="">Mobiliario</a>
+                <a href="">Software</a>
+                <a href="">Accesorios</a>
+                <a href="">Marketing</a>
+                <a href="">Finanzas</a>
+                <a href="">Formación</a>
+                <a href="">Comunicación</a>
             </aside>
             <div class="sectionSlider">
                 <div class="slider">
@@ -61,26 +61,42 @@
             </header>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Titulo Producto</h3>
-                <p>Descripción producto</p>
+                <h3>Laptop Pro 14"</h3>
+                <p class="productoDescripción">Ideal para edición y programación. Potencia y portabilidad.</p>
+                <div class="precio">
+                    <p class="precioRegular">$1499</p>
+                    <p class="precioDescuento">$999</p>
+                </div>
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Titulo Producto</h3>
-                <p>Descripción producto</p>
+                <h3>Silla Ergonómica XL</h3>
+                <p class="productoDescripción">Máxima comodidad para largas jornadas frente al escritorio.</p>
+                <div class="precio">
+                    <p class="precioRegular">$229</p>
+                    <p class="precioDescuento">$149</p>
+                </div>
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Titulo Producto</h3>
-                <p>Descripción producto</p>
+                <h3>Tablet Gráfica XP</h3>
+                <p class="productoDescripción">Precisión y sensibilidad para ilustradores y diseñadores.</p>
+                <div class="precio">
+                    <p class="precioRegular">$319</p>
+                    <p class="precioDescuento">$219</p>
+                </div>
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Titulo Producto</h3>
-                <p>Descripción producto</p>
+                <h3>Lámpara LED Ajustable</h3>
+                <p class="productoDescripción">Iluminación adaptable a cualquier espacio de trabajo.</p>
+                <div class="precio">
+                    <p class="precioRegular">$69</p>
+                    <p class="precioDescuento">$39</p>
+                </div>
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
         </section>
@@ -94,8 +110,32 @@
                 </nav>
             </header>
             <article class="categoriaItem">
-                <img src="./img/carrito-de-compras.svg" alt="Carrito de Compras">
-                <h3>Categoría 1</h4>
+                <img src="./img/computadora-portatil.svg" alt="Carrito de Compras">
+                <h3>Tecnología</h4>
+            </article>
+            <article class="categoriaItem">
+                <img src="./img/asiento-de-persona-reclinado.svg" alt="Carrito de Compras">
+                <h3>Mobiliario</h4>
+            </article>
+            <article class="categoriaItem">
+                <img src="./img/configuracion-alternativa-del-flujo-de-trabajo.svg" alt="Carrito de Compras">
+                <h3>Gestión</h4>
+            </article>
+            <article class="categoriaItem">
+                <img src="./img/interactivo.svg" alt="Carrito de Compras">
+                <h3>Software</h4>
+            </article>
+            <article class="categoriaItem">
+                <img src="./img/bajar-volumen.svg" alt="Carrito de Compras">
+                <h3>Audio</h4>
+            </article>
+            <article class="categoriaItem">
+                <img src="./img/pendrive-usb.svg" alt="Carrito de Compras">
+                <h3>Accesorios</h4>
+            </article>
+            <article class="categoriaItem">
+                <img src="./img/gorro-de-graduacion.svg" alt="Carrito de Compras">
+                <h3>Educación</h4>
             </article>
         </section>
         <section class="masVendidos">
@@ -109,26 +149,38 @@
             </header>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Titulo Producto</h3>
-                <p>Descripción producto</p>
+                <h3>Teclado Mecánico RGB</h3>
+                <p class="productoDescripción">Rendimiento y estilo en cada pulsación, ideal para trabajar y jugar.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$89</p>
+                </div>
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Titulo Producto</h3>
-                <p>Descripción producto</p>
+                <h3>Audífonos Noise Cancelling</h3>
+                <p class="productoDescripción">Silencia el ruido exterior y concéntrate en tu trabajo.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$119</p>
+                </div>
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Titulo Producto</h3>
-                <p>Descripción producto</p>
+                <h3>Escritorio Ajustable PRO</h3>
+                <p class="productoDescripción">Trabajá de pie o sentado con este escritorio ajustable en altura.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$249</p>
+                </div>
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
             <article class="cardProducto">
                 <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Titulo Producto</h3>
-                <p>Descripción producto</p>
+                <h3>Mouse Ergonómico Vertical</h3>
+                <p class="productoDescripción">Cuida tu muñeca con este mouse ergonómico de diseño vertical.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$49</p>
+                </div>
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
         </section>
