--- a/index.html
+++ b/index.html
@@ -184,6 +184,100 @@
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
         </section>
+        <section class="reseñasSeccion">
+            <header>
+                <h4>Lo que dicen los</h4>
+                <h2>Clientes Felices</h2>
+            </header>
+            <!-- <div class="reseñasContenedor"> -->
+                <article class="reseña reseña1">
+                    <img class="raiting" src="./img/5estrellas.svg" alt="Carrito de Compras">
+                    <p class="comentario">La verdad, la compu que compré me cambió el día a día. Súper rápida, no se cuelga y me permite trabajar sin interrupciones. La recomiendo a full.</p>
+                    <div class="reseñaPersona">
+                        <div class="infoPersona">
+                            <img class="imgPersona" src="https://i.pravatar.cc/150?img=60" alt="">
+                            <div class="detallesPersona">
+                                <h3>Santiago A.</h3>
+                                <p>Diseñador Gráfico</p>
+                            </div>
+                        </div>
+                        <img class="logoG" src="./img/google_g_icon.png" alt="">
+                    </div>
+                </article>
+                <article class="reseña reseña2">
+                    <img class="raiting" src="./img/5estrellas.svg" alt="Carrito de Compras">
+                    <p class="comentario">Los auriculares con cancelación de ruido son una locura, no escucho nada de lo que pasa alrededor. Ideales para concentrarme cuando trabajo desde casa.</p>
+                    <div class="reseñaPersona">
+                        <div class="infoPersona">
+                            <img class="imgPersona" src="https://i.pravatar.cc/150?img=32" alt="">
+                            <div class="detallesPersona">
+                                <h3>Lucía M.</h3>
+                                <p>Ingeniera</p>
+                            </div>
+                        </div>
+                        <img class="logoG" src="./img/google_g_icon.png" alt="">
+                    </div>
+                </article>
+                <article class="reseña reseña3">
+                    <img class="raiting" src="./img/5estrellas.svg" alt="Carrito de Compras">
+                    <p class="comentario">Compré la tablet gráfica y funciona excelente. Precisa y rápida para ilustrar, estoy muy contenta con la compra. 10 puntos en todo.</p>
+                    <div class="reseñaPersona">
+                        <div class="infoPersona">
+                            <img class="imgPersona" src="https://i.pravatar.cc/150?img=33" alt="">
+                            <div class="detallesPersona">
+                                <h3>Santiago A.</h3>
+                                <p>Diseñador Gráfico</p>
+                            </div>
+                        </div>
+                        <img class="logoG" src="./img/google_g_icon.png" alt="">
+                    </div>
+                </article>
+                <article class="reseña reseña4">
+                    <img class="raiting" src="./img/5estrellas.svg" alt="Carrito de Compras">
+                    <p class="comentario">El escritorio ajustable es justo lo que necesitaba para mis jornadas largas. Ahora me paro cada tanto y me ayuda un montón con la postura. ¡Muy satisfecho!</p>
+                    <div class="reseñaPersona">
+                        <div class="infoPersona">
+                            <img class="imgPersona" src="https://i.pravatar.cc/150?img=50" alt="">
+                            <div class="detallesPersona">
+                                <h3>Julián F.</h3>
+                                <p>Copywritter</p>
+                            </div>
+                        </div>
+                        <img class="logoG" src="./img/google_g_icon.png" alt="">
+                    </div>
+                </article>
+                <article class="reseña reseña5">
+                    <img class="raiting" src="./img/5estrellas.svg" alt="Carrito de Compras">
+                    <p class="comentario">La silla ergonómica que compré es un antes y después. Paso horas sentado trabajando y ya no termino con dolor de espalda. Recomendadísima.</p>
+                    <div class="reseñaPersona">
+                        <div class="infoPersona">
+                            <img class="imgPersona" src="https://i.pravatar.cc/150?img=66" alt="">
+                            <div class="detallesPersona">
+                                <h3>Martín G.</h3>
+                                <p>Desarrollador Cobol</p>
+                            </div>
+                        </div>
+                        <img class="logoG" src="./img/google_g_icon.png" alt="">
+                    </div>
+                </article>
+                <article class="reseña reseña6">
+                    <img class="raiting" src="./img/5estrellas.svg" alt="Carrito de Compras">
+                    <p class="comentario">El monitor extra fue la mejor compra que hice. Me cambió la forma de trabajar, ahora tengo todo más organizado y no pierdo tiempo cambiando de ventana. Excelente.</p>
+                    <div class="reseñaPersona">
+                        <div class="infoPersona">
+                            <img class="imgPersona" src="https://i.pravatar.cc/150?img=47" alt="">
+                            <div class="detallesPersona">
+                                <h3>Sofía R.</h3>
+                                <p>Diseñadora UX/UI</p>
+                            </div>
+                        </div>
+                        <img class="logoG" src="./img/google_g_icon.png" alt="">
+                    </div>
+                </article>
+
+
+            <!-- </div> -->
+        </section>
     </main>
     <footer>
         <div class="footerContenedor">
