Añadimos Flyer de producto nuevo

--- a/index.html
+++ b/index.html
@@ -189,7 +189,6 @@
                 <h4>Lo que dicen los</h4>
                 <h2>Clientes Felices</h2>
             </header>
-            <!-- <div class="reseñasContenedor"> -->
                 <article class="reseña reseña1">
                     <img class="raiting" src="./img/5estrellas.svg" alt="Carrito de Compras">
                     <p class="comentario">La verdad, la compu que compré me cambió el día a día. Súper rápida, no se cuelga y me permite trabajar sin interrupciones. La recomiendo a full.</p>
@@ -276,7 +275,35 @@
                 </article>
 
 
-            <!-- </div> -->
+        </section>
+        <section class="flyer">
+            <div class="flyerContenedorImg">
+                <img class="logoG" src="./img/double_screen.png" alt="">
+            </div>            
+            <div class="flyerContenedorInfo">
+                <h4>NUEVO</h4>
+                <h2>Incrementa tu <span class="tituloColor">productividad</span></h2>
+                <h5>Compatible con todos los dispositivos. Solo un cablde USB-C video para la conexión.</h5>
+                <div class="timer">
+                    <div class="timerCirculos">
+                        <p class="timerNummero">2</p>
+                        <p class="timerPalabra">Días</p>
+                    </div>
+                    <div class="timerCirculos">
+                        <p class="timerNummero">5</p>
+                        <p class="timerPalabra">Horas</p>
+                    </div>
+                    <div class="timerCirculos">
+                        <p class="timerNummero">59</p>
+                        <p class="timerPalabra">Minutos</p>
+                    </div>
+                    <div class="timerCirculos">
+                        <p class="timerNummero">35</p>
+                        <p class="timerPalabra">Segundos</p>
+                    </div>
+                </div>
+                <a href="#">COMPRAR AHORA</a>
+            </div>
         </section>
     </main>
     <footer>
