ajuste css: centralizado el ancho del sitio en una sola propiedad: .sectionContenedor{}

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="header" class="header">
-        <div class="headerContenedor">
+        <div class="sectionContenedor headerContenedor">
             <div class="logo">
                 <h1 class="logo">WorkWave Store</h1>
             </div>
@@ -30,7 +30,7 @@
         </div>
     </header>
     <main>
-        <section class="heroSection">
+        <section class="sectionContenedor heroSection">
             <aside class="aside">
                 <a href="">Tecnología</a>
                 <a href="">Productividad</a>
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </section>
-        <section class="productosDelDia">
+        <section class="sectionContenedor productosDelDia">
             <header>
                 <h4>Productos del día</h4>
                 <h2>Ofertas Trueno</h2>
@@ -100,7 +100,7 @@
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
         </section>
-        <section class="categorias">
+        <section class="sectionContenedor categorias">
             <header>
                 <h4>Explora nuestras</h4>
                 <h2>Categorías</h2>
@@ -138,7 +138,7 @@
                 <h3>Educación</h4>
             </article>
         </section>
-        <section class="masVendidos">
+        <section class="sectionContenedor masVendidos">
             <header>
                 <h4>No te pierdas lo</h4>
                 <h2>Más Vendidos</h2>
@@ -184,7 +184,7 @@
                 <a href="" class="btnCarrito">Ver más</a>
             </article>
         </section>
-        <section class="reseñasSeccion">
+        <section class="sectionContenedor reseñasSeccion">
             <header>
                 <h4>Lo que dicen los</h4>
                 <h2>Clientes Felices</h2>
@@ -276,7 +276,7 @@
 
 
         </section>
-        <section class="flyer">
+        <section class="sectionContenedor flyer">
             <div class="flyerContenedorImg">
                 <img class="logoG" src="./img/double_screen.png" alt="">
             </div>            
