--- a/index.html
+++ b/index.html
@@ -110,31 +110,46 @@
                 </nav>
             </header>
             <article class="categoriaItem">
-                <img src="./img/computadora-portatil.svg" alt="Carrito de Compras">
+                <svg class="iconSVG" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="m13.688.378c-1.01-.501-2.368-.499-3.377.002L2.027,4.5l3.973,1.977v2.523c0,3.309,2.691,6,6,6s6-2.691,6-6v-2.524l3-1.492v7.016h1v-7.5L13.688.378Zm3.312,8.622c0,2.757-2.243,5-5,5s-5-2.243-5-5v-2.026l3.312,1.648c.505.251,1.096.376,1.688.376s1.185-.126,1.689-.378l3.312-1.647v2.027Zm-3.757-1.274c-.73.365-1.752.364-2.486,0l-6.484-3.227,6.484-3.225c.732-.365,1.755-.363,2.487-.002l6.484,3.227-6.485,3.226Zm6.757,13.274v3h-1v-3c0-1.654-1.346-3-3-3h-.417l-3.568,4.281-3.568-4.281h-.446c-1.654,0-3,1.346-3,3v3h-1v-3c0-2.206,1.794-4,4-4h.915l3.1,3.719,3.099-3.719h.886c2.206,0,4,1.794,4,4Z"/>
+                  </svg>
                 <h3>Tecnología</h4>
             </article>
             <article class="categoriaItem">
-                <img src="./img/asiento-de-persona-reclinado.svg" alt="Carrito de Compras">
+                <svg class="iconSVG" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="m14.955,19l.5,1h-6.955c-2.546,0-4.743-1.728-5.344-4.201L1.017,7h1.029l2.081,8.562c.492,2.024,2.29,3.438,4.373,3.438h6.455Zm5.354,4l-3.5-7h-8.315c-.697,0-1.297-.474-1.459-1.151l-.681-2.849h7.646v-1h-7.885l-.956-4h-1.028l1.931,8.081c.27,1.13,1.27,1.919,2.432,1.919h7.697l3.5,7h3.309v-1h-2.691ZM2.017,2.5c0-1.379,1.122-2.5,2.5-2.5s2.5,1.121,2.5,2.5-1.122,2.5-2.5,2.5-2.5-1.121-2.5-2.5Zm1,0c0,.827.673,1.5,1.5,1.5s1.5-.673,1.5-1.5-.673-1.5-1.5-1.5-1.5.673-1.5,1.5Z"/>
+                </svg>
                 <h3>Mobiliario</h4>
             </article>
             <article class="categoriaItem">
-                <img src="./img/configuracion-alternativa-del-flujo-de-trabajo.svg" alt="Carrito de Compras">
+                <svg class="iconSVG" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="m3.5,15h8v2h1v-2h8v2h1v-3h-9v-2.026c1.062-.108,2.071-.556,2.863-1.275l1.926,1.125,1.512-2.591-1.94-1.133c.094-.384.14-.748.14-1.101s-.046-.716-.14-1.101l1.94-1.133-1.512-2.591-1.937,1.13c-.537-.488-1.166-.852-1.853-1.067V0h-3v2.238c-.687.216-1.315.579-1.853,1.067l-1.937-1.13-1.512,2.591,1.94,1.133c-.094.384-.14.748-.14,1.101s.046.716.14,1.101l-1.94,1.133,1.512,2.591,1.926-1.125c.793.719,1.801,1.167,2.863,1.275v2.026H2.5v3h1v-2Zm5.58-5.267l-.273-.291-1.736,1.014-.504-.863,1.756-1.025-.12-.381c-.138-.438-.202-.816-.202-1.187s.064-.749.202-1.188l.12-.38-1.756-1.025.504-.863,1.747,1.02.272-.291c.55-.586,1.249-.989,2.021-1.165l.389-.088V1h1v2.019l.389.088c.772.176,1.472.579,2.021,1.165l.272.291,1.747-1.02.504.863-1.756,1.025.12.38c.138.439.202.817.202,1.188s-.064.749-.202,1.187l-.12.381,1.756,1.025-.504.863-1.736-1.014-.273.291c-.765.817-1.802,1.267-2.92,1.267s-2.155-.45-2.92-1.267Zm-.08,14.267h6v-6h-6v6Zm1-5h4v4h-4v-4Zm8-1v6h6v-6h-6Zm5,5h-4v-4h4v4ZM0,24h6v-6H0v6Zm1-5h4v4H1v-4ZM14,7c0-1.103-.897-2-2-2s-2,.897-2,2,.897,2,2,2,2-.897,2-2Zm-3,0c0-.551.448-1,1-1s1,.449,1,1-.448,1-1,1-1-.449-1-1Z"/>
+                  </svg>
                 <h3>Gestión</h4>
             </article>
             <article class="categoriaItem">
-                <img src="./img/interactivo.svg" alt="Carrito de Compras">
+                <svg class="iconSVG" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M22,16.051V7.5c0-2.481-2.019-4.5-4.5-4.5H6.5c-2.481,0-4.5,2.019-4.5,4.5v8.551c-1.14,.232-2,1.242-2,2.449,0,1.379,1.122,2.5,2.5,2.5H21.5c1.378,0,2.5-1.121,2.5-2.5,0-1.208-.86-2.217-2-2.449ZM3,7.5c0-1.93,1.57-3.5,3.5-3.5h11c1.93,0,3.5,1.57,3.5,3.5v8.5h-5.5c-.133,0-.26,.053-.354,.146l-.854,.854h-4.586l-.854-.854c-.094-.094-.221-.146-.354-.146H3V7.5Zm18.5,12.5H2.5c-.827,0-1.5-.673-1.5-1.5s.673-1.5,1.5-1.5h5.793l.854,.854c.094,.094,.221,.146,.354,.146h5c.133,0,.26-.053,.354-.146l.854-.854h5.793c.827,0,1.5,.673,1.5,1.5s-.673,1.5-1.5,1.5Z"/>
+                  </svg>
+                  
                 <h3>Software</h4>
             </article>
             <article class="categoriaItem">
-                <img src="./img/bajar-volumen.svg" alt="Carrito de Compras">
+                <svg class="iconSVG" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="m2.5,6c-1.378,0-2.5,1.122-2.5,2.5v7c0,1.378,1.122,2.5,2.5,2.5h2.822l6.678,5.458V.585l-6.677,5.415h-2.823Zm8.5-3.316v18.666l-5.322-4.35h-3.178c-.827,0-1.5-.673-1.5-1.5v-7c0-.827.673-1.5,1.5-1.5h3.177l5.323-4.316Zm9,9.316c0,2.757-2.243,5-5,5h-1v-1h1c2.206,0,4-1.794,4-4s-1.794-4-4-4h-1v-1h1c2.757,0,5,2.243,5,5Z"/>
+                </svg>
                 <h3>Audio</h4>
             </article>
             <article class="categoriaItem">
-                <img src="./img/pendrive-usb.svg" alt="Carrito de Compras">
+                <svg class="iconSVG" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M19,8.051V0H5V8.051c-1.14,.232-2,1.242-2,2.449v4.5c0,4.962,4.037,9,9,9s9-4.038,9-9v-4.5c0-1.207-.86-2.217-2-2.449Zm-1-7.051v7H6V1h12Zm2,14c0,4.411-3.589,8-8,8s-8-3.589-8-8v-4.5c0-.827,.673-1.5,1.5-1.5h13c.827,0,1.5,.673,1.5,1.5v4.5ZM10,6h-1v-2h1v2Zm5,0h-1v-2h1v2Z"/>
+                </svg>                  
                 <h3>Accesorios</h4>
             </article>
             <article class="categoriaItem">
-                <img src="./img/gorro-de-graduacion.svg" alt="Carrito de Compras">
+                <svg class="iconSVG" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="m13.688.378c-1.01-.501-2.368-.499-3.377.002L2.027,4.5l3.973,1.977v2.523c0,3.309,2.691,6,6,6s6-2.691,6-6v-2.524l3-1.492v7.016h1v-7.5L13.688.378Zm3.312,8.622c0,2.757-2.243,5-5,5s-5-2.243-5-5v-2.026l3.312,1.648c.505.251,1.096.376,1.688.376s1.185-.126,1.689-.378l3.312-1.647v2.027Zm-3.757-1.274c-.73.365-1.752.364-2.486,0l-6.484-3.227,6.484-3.225c.732-.365,1.755-.363,2.487-.002l6.484,3.227-6.485,3.226Zm6.757,13.274v3h-1v-3c0-1.654-1.346-3-3-3h-.417l-3.568,4.281-3.568-4.281h-.446c-1.654,0-3,1.346-3,3v3h-1v-3c0-2.206,1.794-4,4-4h.915l3.1,3.719,3.099-3.719h.886c2.206,0,4,1.794,4,4Z"/>
+                  </svg>
                 <h3>Educación</h4>
             </article>
         </section>
