Ajustes estilos flyer

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                         <p class="timerPalabra">Segundos</p>
                     </div>
                 </div>
-                <a href="#">COMPRAR AHORA</a>
+                <a href="#">VER MÁS</a>
             </div>
         </section>
     </main>
