Sección Explorar nuestros productos y Nuevos productos

--- a/index.html
+++ b/index.html
@@ -44,16 +44,18 @@
             </aside>
             <div class="sectionSlider">
                 <div class="slider">
-                    <h2>New Arrivals</h2>
-                    <p>Obtener 50% OFF en la primer compra</p>
+                    <h2>Novedades</h2>
+                    <p>Obtener 20% OFF en la primer compra</p>
                     <a href="#">COMPRAR AHORA</a>
                 </div>
             </div>
         </section>
         <section class="sectionContenedor productosDelDia">
             <header>
-                <h4>Productos del día</h4>
-                <h2>Ofertas Trueno</h2>
+                <div class="titulos">
+                    <h4>Productos del día</h4>
+                    <h2>Ofertas Trueno</h2>
+                </div>
                 <nav>
                     <a href=""><</a>
                     <a href="">></a>
@@ -102,8 +104,10 @@
         </section>
         <section class="sectionContenedor categorias">
             <header>
-                <h4>Explora nuestras</h4>
-                <h2>Categorías</h2>
+                <div class="titulos">
+                    <h4>Explora nuestras</h4>
+                    <h2>Categorías</h2>
+                </div>
                 <nav>
                     <a href=""><</a>
                     <a href="">></a>
@@ -155,8 +159,10 @@
         </section>
         <section class="sectionContenedor masVendidos">
             <header>
-                <h4>No te pierdas lo</h4>
-                <h2>Más Vendidos</h2>
+                <div class="titulos">
+                    <h4>No te pierdas lo</h4>
+                    <h2>Más Vendidos</h2>
+                </div>
                 <nav>
                     <a href=""><</a>
                     <a href="">></a>
@@ -319,6 +325,139 @@
                 </div>
                 <a href="#">VER MÁS</a>
             </div>
+        </section>
+        <section class="sectionContenedor nuestrosProductos">
+            <header>
+                <div class="titulos">
+                    <h4>Productos</h4>
+                    <h2>Explora nuestros productos</h2>
+                </div>
+                <nav>
+                    <a href=""><</a>
+                    <a href="">></a>
+                </nav>
+            </header>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Mini Proyector Portátil 1080p</h3>
+                <p class="productoDescripción">Perfecto para presentaciones o entretenimiento en cualquier lugar.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$189</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Pizarra Digital Interactiva</h3>
+                <p class="productoDescripción">Ideal para reuniones colaborativas y presentaciones en equipo.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$419</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Router WiFi 6 de Alta Velocidad</h3>
+                <p class="productoDescripción">Conectividad estable y rápida para múltiples dispositivos.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$129</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Almohadilla de Escritorio Antideslizante</h3>
+                <p class="productoDescripción">Protege tu escritorio y mejora la comodidad de uso.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$29</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Organizador de Cables Magnético</h3>
+                <p class="productoDescripción">Mantén tus cables organizados y sin enredos en tu espacio de trabajo.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$49</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Cámara Web 4K con Micrófono</h3>
+                <p class="productoDescripción">Calidad de video profesional para videollamadas y transmisiones en vivo.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$159</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Pad de Carga Inalámbrica Rápida</h3>
+                <p class="productoDescripción">Carga tu teléfono mientras trabajas sin necesidad de cables.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$69</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Estación de Anclaje USB-C Multifuncional</h3>
+                <p class="productoDescripción">Conecta todos tus dispositivos con un solo puerto. Ideal para laptops modernas.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$79</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+        </section>
+        <section class="sectionContenedor nuestrosProductos">
+            <header>
+                <div class="titulos">
+                    <h4>Destacados</h4>
+                    <h2>Últimos Ingresos</h2>
+                </div>
+                <nav>
+                    <a href=""><</a>
+                    <a href="">></a>
+                </nav>
+            </header>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Mini Proyector Portátil 1080p</h3>
+                <p class="productoDescripción">Perfecto para presentaciones o entretenimiento en cualquier lugar.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$189</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Pizarra Digital Interactiva</h3>
+                <p class="productoDescripción">Ideal para reuniones colaborativas y presentaciones en equipo.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$419</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Router WiFi 6 de Alta Velocidad</h3>
+                <p class="productoDescripción">Conectividad estable y rápida para múltiples dispositivos.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$129</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            <article class="cardProducto">
+                <img src="https://dummyimage.com/480x4:3/" alt="">
+                <h3>Router WiFi 6 de Alta Velocidad</h3>
+                <p class="productoDescripción">Conectividad estable y rápida para múltiples dispositivos.</p>
+                <div class="precio">
+                    <p class="precioDescuento">$129</p>
+                </div>
+                <a href="" class="btnCarrito">Ver más</a>
+            </article>
+            
         </section>
     </main>
     <footer>
