Sección Ultimos ingresos

--- a/index.html
+++ b/index.html
@@ -421,41 +421,37 @@
                     <a href="">></a>
                 </nav>
             </header>
-            <article class="cardProducto">
-                <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Mini Proyector Portátil 1080p</h3>
-                <p class="productoDescripción">Perfecto para presentaciones o entretenimiento en cualquier lugar.</p>
-                <div class="precio">
-                    <p class="precioDescuento">$189</p>
+            <article class="flyerNuevosProductos1">
+                <img src="./img/UltimosProductos1.svg" alt="PlayStation 5" class="productoImagen">
+                <div class="infoTexto">
+                    <h3>PlayStation 5</h3>
+                    <p>En sus versiones en Blanco y Negro</p>
+                    <a href="" class="btnCarrito">Ver más</a>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
             </article>
-            <article class="cardProducto">
-                <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Pizarra Digital Interactiva</h3>
-                <p class="productoDescripción">Ideal para reuniones colaborativas y presentaciones en equipo.</p>
-                <div class="precio">
-                    <p class="precioDescuento">$419</p>
+            <article class="flyerNuevosProductos2">
+                <img src="./img/UltimosProductos2.svg" alt="Pizarra Digital Interactiva" class="productoImagen">
+                <div class="infoTexto">
+                    <h3>Parlante JBL</h3>
+                    <p>Sonido potente y portátil para cualquier ocasión.</p>
+                    <a href="" class="btnCarrito">Ver más</a>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
             </article>
-            <article class="cardProducto">
-                <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Router WiFi 6 de Alta Velocidad</h3>
-                <p class="productoDescripción">Conectividad estable y rápida para múltiples dispositivos.</p>
-                <div class="precio">
-                    <p class="precioDescuento">$129</p>
+            <article class="flyerNuevosProductos3">
+                <img src="./img/UltimosProductos3.svg" alt="Pizarra Digital Interactiva" class="productoImagen">
+                <div class="infoTexto">
+                    <h3>Asistente Virtual Alexa</h3>
+                    <p>Controla tu hogar inteligente con solo tu voz.</p>
+                    <a href="" class="btnCarrito">Ver más</a>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
             </article>
-            <article class="cardProducto">
-                <img src="https://dummyimage.com/480x4:3/" alt="">
-                <h3>Router WiFi 6 de Alta Velocidad</h3>
-                <p class="productoDescripción">Conectividad estable y rápida para múltiples dispositivos.</p>
-                <div class="precio">
-                    <p class="precioDescuento">$129</p>
+            <article class="flyerNuevosProductos4">
+                <img src="./img/UltimosProductos4.svg" alt="Pizarra Digital Interactiva" class="productoImagen">
+                <div class="infoTexto">
+                    <h3>Monitor Gaming</h3>
+                    <p>Ideal para una experiencia de juego inmersiva.</p>
+                    <a href="" class="btnCarrito">Ver más</a>
                 </div>
-                <a href="" class="btnCarrito">Ver más</a>
             </article>
             
         </section>
