--- a/index.html
+++ b/index.html
@@ -453,7 +453,23 @@
                     <a href="" class="btnCarrito">Ver más</a>
                 </div>
             </article>
-            
+        </section>
+        <section class="sectionContenedor caracteristicas">
+            <div class="item">
+                <img src="./img/Caract1.svg" alt="Envio rapido y gratis">
+                <h3>Envío rápido y gratis</h3>
+                <p>Envío gratis en ordenes superior a $149</p>
+            </div>
+            <div class="item">
+                <img src="./img/Caract2.svg" alt="Atencion 24/7">
+                <h3>Atención 24/7</h3>
+                <p>Servicio de atención 24/7</p>
+            </div>
+            <div class="item">
+                <img src="./img/Caract3.svg" alt="Garantia">
+                <h3>Garantía</h3>
+                <p>Contamos con garantía de 30 días</p>
+            </div>
         </section>
     </main>
     <footer>
