Footer y Ajustes varios

--- a/index.html
+++ b/index.html
@@ -473,7 +473,47 @@
         </section>
     </main>
     <footer>
-        <div class="footerContenedor">
+        <div class="sectionContenedor footerPrincipal">
+            <div class="col col1">
+                <h3>Exclusivo</h3>
+                <h3>Suscribite</h3>
+                <p>Obtén un 10% off en tu primer orden</p>
+                <input type="text" placeholder='Tu correo electronico'/>
+            </div>
+            <div class="col col2">
+                <h3>Soporte</h3>
+                <p>Calle Falsa 123</p>
+                <a href="mailto:contacto@workwave.com" target="blank">contacto@workwave.com</a>
+                <p>+54 221 7765 3445</p>
+            </div>
+            <div class="col col3">
+                <h3>Cuenta</h3>
+                <a href="">Mi cuenta</a>
+                <a href="">Iniciar Sesion / Registro</a>
+                <a href=""> Carrito</a>
+                <a href="">Lista de Deseos</a>
+                <a href="">Tienda</a>
+            </div>
+            <div class="col col4">
+                <h3>Enlaces rápidos</h3>
+                <a href="">Políticas de Privacidad</a>
+                <a href="">Términos de uso</a>
+                <a href="">Preguntas Frecuentes</a>
+                <a href="">Contacto</a>
+            </div>
+            <div class="col col5">
+                <h3>Descarga la App</h3>
+                <p>Ahorra 10% solo para nuevos usuarios</p>
+                <img src="./img/App.svg" alt="">
+                <div class="rrss">
+                    <a href=""><img src="./img/Icon-Facebook.svg" alt=""></a>
+                    <a href=""><img src="./img/Icon-Twitter.svg" alt=""></a>
+                    <a href=""><img src="./img/icon-instagram.svg" alt=""></a>
+                    <a href=""><img src="./img/Icon-Linkedin.svg" alt=""></a>
+                </div>
+            </div>
+        </div>
+        <div class="sectionContenedor footerInferior">
             <p>&copy; 2024 WorkWave Store. Todos los derechos reservados.</p>
             <p>Desarrollado por <a href="https://fedemaciel.org" target="_blank">FM</a></p>
         </div>    
